Actions
Bug #5931
closedafter svccfg import is killed, subsequent import fails
Start date:
2015-05-15
Due date:
% Done:
100%
Estimated time:
Difficulty:
Medium
Tags:
Gerrit CR:
Description
I've been debugging some issues where mdata:execute times out and SMF kills the contract while "svccfg import" is running. If you try to clear the service to try again, "svccfg import" fails with a message like this:
+ svccfg import /opt/smartdc/registrar/smf/manifests/registrar.xml svccfg: Temporary service "TEMP/sds/application/registrar" must be deleted before this manifest can be imported. svccfg: Import of /opt/smartdc/registrar/smf/manifests/registrar.xml failed. Progress: svccfg: Service "sds/application/registrar": not reached. svccfg: Instance "default": not reached. svccfg: Import of /opt/smartdc/registrar/smf/manifests/registrar.xml failed. [ Oct 22 21:12:25 Method "start" exited with status 1. ]
If you follow the instructions and remove the temporary service, it works. svccfg should clean up after itself in this case.
Updated by Electric Monk about 7 years ago
- Status changed from New to Closed
git commit 254c049a4a15a87ed9928075be57535f41ae4c29
commit 254c049a4a15a87ed9928075be57535f41ae4c29 Author: Jerry Jelinek <jerry.jelinek@joyent.com> Date: 2015-05-19T15:44:37.000Z 5931 after svccfg import is killed, subsequent import fails Reviewed by: Robert Mustacchi <rm@joyent.com> Reviewed by: Tony Nguyen <truongqnguien@gmail.com> Approved by: Dan McDonald <danmcd@omniti.com>
Actions