5931 after svccfg import is killed, subsequent import fails Reviewed by: Robert Mustacchi <rm@joyent.com> Reviewed by: Tony Nguyen <truongqnguien@gmail.com> Approved by: Dan McDonald <danmcd@omniti.com>